Modified google map html to pass Validations and add css styles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Henry Anderson</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css"/>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css" >
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         <li>Learning and helping other developers</li>
         <li>Creating industry base web applications</li>
       </ul>
-      <p>Please take a look at my webite and feel free to <a href="mailto:henryaovare@gmail.com">Contact me</a> </p>
+      <h3>Please take a look at my webite and feel free to <a href="mailto:henryaovare@gmail.com">Contact me</a> </h3>
       </div>
     </article>
 <hr>
@@ -47,6 +47,12 @@
         <a href="https://fiverr.com" target="_blank">Fiverr</a>
          as <em>Ruby on rails application code debugger and refactor.</em> 
          I have created many fun projects for friends and to gain more experience
+      </p>
+      <p>
+        When i am not riding in the world of web development, i love cooking and the night life so
+        i go out with family and friends to feel the cool breeze and chiiled drinks.
+        I love cooking from a cookbook given to me as a gift from some missionaries which contains
+        recipes from many countries. yeah, that's some continental stuff right there..
       </p>
       <p>If you are looking to hire a new developer (or looking for a partner for 
         a hackathon) please reach out!. I am so excited to work with other developers 
@@ -65,22 +71,11 @@
           <li><a href="https://github.com/bottles10/" target="_blank">Github</a></li>
 
         </ol>
-        <!-- Map Generator using https://google-map-generator.com/ -->
-        <div class="mapouter wrapper">
-          <div class="gmap_canvas">
-            <iframe width="400" height="400" id="gmap_canvas" 
-                    src="https://maps.google.com/maps?q=tarkwa&t=&z=13&ie=UTF8&iwloc=&output=embed" 
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-            </iframe>
-              <a href="https://123movies-to.org"></a>
-            <br>
-            <style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}
-            </style>
-              <a href="https://www.embedgooglemap.net">insert google map html</a>
-              <style>.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}
-              </style>
-          </div>
-        </div>
+        <!-- Map Generator using https://google maps/ -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31781.756134978925!2d-2.0062496094406588!3d5.306389853627028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdd6e0390c2642d%3A0xb4240316cf38812!2sTarkwa!5e0!3m2!1sen!2sgh!4v1679579185823!5m2!1sen!2sgh" 
+                width="400" height="300" style="border:0;" class="wrapper"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
     </article>
   </main>
@@ -88,7 +83,7 @@
 
   <!--Footer-->
   <footer>
-    <p>&copy Henry Anderson</p>
+    <p>&amp;copy Henry Anderson</p>
   </footer>
   <!--End of footer-->
 </body>
