--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p>
         When i am not riding in the world of web development, i love cooking and the night life so
         i go out with family and friends to feel the cool breeze and chiiled drinks.
-        I love cooking from a cookbook given to me as a gift from some missionaries which contains
+        I love cooking from a cookbook given to me as a gift from missionaries which contains
         recipes from many countries. yeah, that's some continental stuff right there..
       </p>
       <p>If you are looking to hire a new developer (or looking for a partner for 
