Add comment for image source

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <main>
     <article>
       <div class="wrapper">
+        <!-- Image source from my github profile-->
         <img src="https://avatars.githubusercontent.com/u/68777119?v=4" 
             alt="Henry Anderson" class="center">
       <h2>Hi, i am Henry Anderson</h2>
