--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <!--Footer-->
   <footer>
-    <p>&amp;copy Henry Anderson</p>
+    <p>&#169; Henry Anderson</p>
   </footer>
   <!--End of footer-->
 </body>
